@@ -1,15 +1,31 @@
 package dev.home.platform.web;
 
+import dev.home.platform.domain.PipelineInstance;
 import dev.home.platform.domain.PipelineInstanceRepository;
 import dev.home.platform.service.DesignGenerationService;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
+import java.util.Collections;
+import java.util.HashMap;
 import java.util.Map;
+import java.util.Optional;
 
 @RestController
 @RequestMapping("/api/instances/{id}")
 public class DesignController {
+
+    private static ResponseEntity<Void> notFoundVoid() {
+        @SuppressWarnings("unchecked")
+        ResponseEntity<Void> r = (ResponseEntity<Void>) (ResponseEntity<?>) ResponseEntity.notFound().build();
+        return r;
+    }
+
+    private static ResponseEntity<Map<String, String>> notFoundMap() {
+        @SuppressWarnings("unchecked")
+        ResponseEntity<Map<String, String>> r = (ResponseEntity<Map<String, String>>) (ResponseEntity<?>) ResponseEntity.notFound().build();
+        return r;
+    }
 
     private final PipelineInstanceRepository repository;
     private final DesignGenerationService designService;
@@ -22,20 +38,22 @@ public class DesignController {
     @GetMapping("/design")
     public ResponseEntity<Map<String, String>> getDesign(@PathVariable String id) {
         return repository.findByInstanceId(id)
-                .map(p -> ResponseEntity.ok(Map.of("content", p.getDesignContent() != null ? p.getDesignContent() : "")))
-                .orElse(ResponseEntity.notFound().build());
+                .map(p -> ResponseEntity.ok(Collections.singletonMap("content", p.getDesignContent() != null ? p.getDesignContent() : "")))
+                .orElse(notFoundMap());
     }
 
     @PutMapping("/design")
-    public ResponseEntity<Void> saveDesign(@PathVariable String id, @RequestBody Map<String, String> body) {
+    @SuppressWarnings("unchecked")
+    public ResponseEntity<?> saveDesign(@PathVariable String id, @RequestBody Map<String, String> body) {
         String content = body != null ? body.get("content") : null;
-        return repository.findByInstanceId(id)
-                .map(p -> {
-                    p.setDesignContent(content != null ? content : "");
-                    repository.save(p);
-                    return ResponseEntity.<Void>ok().build();
-                })
-                .orElse(ResponseEntity.notFound().build());
+        Optional<PipelineInstance> opt = repository.findByInstanceId(id);
+        if (!opt.isPresent()) {
+            return (ResponseEntity<?>) notFoundVoid();
+        }
+        PipelineInstance p = opt.get();
+        p.setDesignContent(content != null ? content : "");
+        repository.save(p);
+        return (ResponseEntity<?>) ResponseEntity.ok().build();
     }
 
     @PostMapping("/design/generate")
@@ -44,15 +62,18 @@ public class DesignController {
                 .map(p -> {
                     try {
                         String content = designService.generate(id);
-                        return ResponseEntity.ok(Map.of("content", content));
+                        return ResponseEntity.ok(Collections.singletonMap("content", content));
                     } catch (IllegalArgumentException e) {
-                        return ResponseEntity.notFound().build();
+                        return notFoundMap();
                     } catch (Exception e) {
                         p.setStatus("FAILED");
                         repository.save(p);
-                        return ResponseEntity.status(500).body(Map.of("content", "", "error", e.getMessage()));
+                        Map<String, String> err = new HashMap<>();
+                        err.put("content", "");
+                        err.put("error", e.getMessage());
+                        return ResponseEntity.status(500).body(err);
                     }
                 })
-                .orElse(ResponseEntity.notFound().build());
+                .orElse(notFoundMap());
     }
 }
